# sentinelbench

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/scenarios/: sb-adversarial-fake-admin-001.json  sb-adversarial-ignore-001.json  sb-benign-admin-001.json  sb-bruteforce-001.json  sb-credump-001.json  sb-powershell-001.json  sb-privesc-001.json
data/schemas/: README.md  incident.schema.json
data/schemas/examples/: incident.example.json
docs/: architecture.md  demo.md  example-investigation.md  methodology.md  product-vision.md  quickstart.md  roadmap.md  technical-report.md  threat-model.md
examples/: run_mock_eval.py
sentinelbench/: __init__.py  cli.py  types.py
sentinelbench/datasets/: __init__.py  loader.py  validate.py
sentinelbench/models/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mock.py  openai_provider.py
sentinelbench/runners/: __init__.py
sentinelbench/scorers/: __init__.py  metrics.py
tests/: test_datasets.py  test_models.py  test_runners.py  test_scorers.py  test_validate.py
