[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelbench"
version = "0.1.0"
description = "Benchmarking framework for security-relevant AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SentinelBench Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinelbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
